WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77073
REGRESSION (
r105555
): Incorrect use of OS() macro breaks OwnPtr when used with Win32 data types
https://bugs.webkit.org/show_bug.cgi?id=77073
Summary
REGRESSION (r105555): Incorrect use of OS() macro breaks OwnPtr when used wit...
Andy Estes
Reported
2012-01-26 00:10:44 PST
r105555
changed PLATFORM(WIN) to OS(WIN), but WTF_OS_WIN isn't defined. This should have been changed to OS(WINDOWS). This causes the preprocessor to strip out Win32 data type overrides for deleteOwnedPtr, causing allocations made by Win32 to be deleted by fastmalloc.
Attachments
Patch
(1.68 KB, patch)
2012-01-26 00:14 PST
,
Andy Estes
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2012-01-26 00:14:35 PST
Created
attachment 124069
[details]
Patch
Andy Estes
Comment 2
2012-01-26 00:17:59 PST
Committed
r105970
: <
http://trac.webkit.org/changeset/105970
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug