REGRESSION (r105555): Incorrect use of OS() macro breaks OwnPtr when used with Win32 data types https://bugs.webkit.org/show_bug.cgi?id=77073

Reviewed by Ryosuke Niwa.

r105555 changed PLATFORM(WIN) to OS(WIN), but WTF_OS_WIN isn't defined.
This should have been changed to OS(WINDOWS). This causes the
preprocessor to strip out Win32 data type overrides for deleteOwnedPtr,
causing allocations made by Win32 to be deleted by fastmalloc.

* wtf/OwnPtrCommon.h:
(WTF): Use OS(WINDOWS) instead of OS(WIN).

git-svn-id: svn://svn.chromium.org/blink/trunk@105970 bbb929c8-8fbe-4397-9dbb-9b2b20218538